<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ViewActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorTextAppearance="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/details_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/details_hint"
                        android:tooltipText="Name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/details_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/color"
                        android:drawablePadding="6dp"
                        android:hint="@string/color_hint"
                        android:tooltipText="Name" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/details_dpl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/gas"
                            android:drawablePadding="6dp"
                            android:hint="@string/density_hint"
                            android:tooltipText="Name" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorTextAppearance="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/details_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/description"
                                android:drawablePadding="6dp"
                                android:hint="@string/description_hint"
                                android:tooltipText="Name" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentScrim="@color/colorPrimary"
                    app:expandedTitleMarginEnd="10dp"
                    app:expandedTitleMarginStart="26dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                    <ImageView
                        android:id="@+id/details_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5"
                        android:contentDescription="@string/img" />

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/details_toolsbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>